--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.540.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
