--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.14",
