--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
