--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "quality:fix": "npm run type-check && npm run lint:fix && npm run format"
   },
   "dependencies": {
+    "@bprogress/next": "^3.2.12",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
